# digit-recognition

./: .gitignore  README.md  digit-recognition.cabal  stack.yaml
src/: Main.hs
