name:                digit-recognition
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/flavray/digit-recognition#readme
license:             BSD3
license-file:        LICENSE
author:              Flavien Raynaud
maintainer:          flavien.raynaud@gmail.com
copyright:           2010 Flavien Raynaud
category:            Tool
build-type:          Simple
cabal-version:       >=1.10

executable digit-recognition
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
